# personal-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
docs/knowledge/: plugin-custom-routes-and-core-access.md  sse-through-cloudflare-tunnel.md  web-push-pwa-cf-access.md
personal_dashboard/: cli.py  config.py  database.py  main.py
personal_dashboard/api/: events.py  notifications.py  notify.py  push.py  shell.py
personal_dashboard/core/: bearer_auth.py  module_loader.py  protocol.py  result.py  services.py  sse.py  web_push.py
personal_dashboard/models/: notification.py  subscription.py
static/: manifest.json  sw.js
static/css/: style.css
static/js/: dashboard-helpers.js  push.js  sse-managed.js
systemd/: personal-dashboard.service
templates/: base.html  dashboard.html
templates/notifications/: detail.html  widget.html
