[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-dashboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "httpx",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic-settings",
    "pywebpush",
    "sse-starlette",
    "tomli; python_version<'3.11'",
]

[project.scripts]
personal-dashboard = "personal_dashboard.cli:main"
pd-notify = "personal_dashboard.cli:notify_cli"

[project.entry-points."personal_dashboard.modules"]
# Populated by external plugins via their own pyproject.toml entry-points.

[tool.setuptools]
packages = [
    "personal_dashboard",
    "personal_dashboard.api",
    "personal_dashboard.core",
    "personal_dashboard.models",
]
